--- a/app/src/main/res/menu/question_options.xml
+++ b/app/src/main/res/menu/question_options.xml
@@ -5,4 +5,9 @@
         android:title="Hint"
         app:showAsAction="always"
         ></item>
+    <item android:id="+@id/menu_share"
+        android:title="Share"
+        app:showAsAction="always"
+        app:actionProviderClass="android.widget.ShareActionProvider"/>
+    <item
 </menu>
