--- a/app/src/main/res/menu/question_options.xml
+++ b/app/src/main/res/menu/question_options.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/goback"
-        android:title="Hint"
-        app:showAsAction="always"
-        ></item>
-    <item android:id="+@id/menu_share"
+        <item android:id="+@id/menu_share"
         android:title="Share"
+            android:icon="@drawable/ic_launcher_share_foreground"
         app:showAsAction="always"
         app:actionProviderClass="android.widget.ShareActionProvider"/>
-    <item
+    <item android:id="@+id/info"
+        android:title="About"
+        android:icon="@drawable/ic_launcher_info_foreground"
+        app:showAsAction="always"
+        />
+    <item android:id="@+id/change_color"
+        android:title="Settings"
+        android:icon="@drawable/ic_launcher_settings"
+        app:showAsAction="always"
+        />
 </menu>
