--- a/app/src/main/res/menu/question_options.xml
+++ b/app/src/main/res/menu/question_options.xml
@@ -5,18 +5,18 @@
     <item android:id="@+id/info"
         android:title="About"
         android:icon="@drawable/ic_launcher_info_foreground"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         />
-    <item android:id="+@id/menu_share"
+    <item android:id="@+id/menu_share"
         android:title="Share"
         android:icon="@drawable/ic_launcher_share_foreground"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider"
         />
     <item android:id="@+id/change_color"
         android:title="Settings"
         android:icon="@drawable/ic_launcher_settings"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         />
 
 </menu>
