--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.TriviaApp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.TriviaApp" parent="Theme.MaterialComponents.DayNight">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -14,7 +14,24 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="Theme.TriviaApp.NoActionBar">
+    <style name="FirstTheme" >
+        <item name="colorPrimary">@color/teal_200</item>
+        <item name="colorPrimaryVariant">@color/teal_700</item>
+        <item name="android:textColor">@color/black</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+    </style>
+    <style name="SecondTheme" >
+        <item name="colorPrimary">#FF5733</item>
+        <item name="colorPrimaryVariant">#C70039</item>
+        <item name="android:textColor">#FF5733</item>
+        <item name="colorOnPrimary">#900C3F</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+
+    </style>
+
+    <style name="Theme.TriviaApp.DayNight">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
