--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,8 +2,8 @@
     <!-- Base application theme. -->
     <style name="Theme.TriviaApp" parent="Theme.MaterialComponents.DayNight">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">#900C3F</item>
+        <item name="colorPrimaryVariant">#C70039</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
@@ -14,29 +14,31 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="FirstTheme" >
-        <item name="colorPrimary">@color/teal_200</item>
-        <item name="colorPrimaryVariant">@color/teal_700</item>
-        <item name="android:textColor">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-    </style>
-    <style name="SecondTheme" >
-        <item name="colorPrimary">#FF5733</item>
-        <item name="colorPrimaryVariant">#C70039</item>
-        <item name="android:textColor">#FF5733</item>
-        <item name="colorOnPrimary">#900C3F</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-
-    </style>
-
     <style name="Theme.TriviaApp.DayNight">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="Theme.TriviaApp.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="FirstTheme" parent = "Theme.MaterialComponents.DayNight">
+        <item name="colorPrimary">@color/teal_200</item>
+        <item name="colorPrimaryVariant">@color/teal_700</item>
+        <item name="colorOnPrimary">#1A6C9E</item>
+        <item name="android:textColor">#B8E1FA</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+    </style>
 
-    <style name="Theme.TriviaApp.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="SecondTheme" parent = "Theme.MaterialComponents.DayNight">
+        <item name="colorPrimary">#FFC333</item>
+        <item name="colorPrimaryVariant">#FF5733</item>
+        <item name="colorOnPrimary">#FF8300</item>
+        <item name="android:textColor">@color/black</item>
+        <!-- Status bar color.-->
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+
+    </style>
+
+    <!--style name="Theme.TriviaApp.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.TriviaApp.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" /-->
 </resources>
