--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -23,16 +23,48 @@
         <item name="colorPrimary">@color/teal_200</item>
         <item name="colorPrimaryVariant">@color/teal_700</item>
         <item name="colorOnPrimary">#1A6C9E</item>
-        <item name="android:textColor">#B8E1FA</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
     </style>
 
     <style name="SecondTheme" parent = "Theme.MaterialComponents.DayNight">
-        <item name="colorPrimary">#FFC333</item>
-        <item name="colorPrimaryVariant">#FF5733</item>
+        <item name="colorPrimary">#FAF36A</item>
+        <item name="colorPrimaryVariant">#FFC300</item>
         <item name="colorOnPrimary">#FF8300</item>
-        <item name="android:textColor">@color/black</item>
+        <!-- Status bar color.-->
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+
+    </style>
+
+    <style name="ThirdTheme" parent = "Theme.MaterialComponents.DayNight">
+        <item name="colorPrimary">#5691F9</item>
+        <item name="colorPrimaryVariant">#0E44A1</item>
+        <item name="colorOnPrimary">#0C285A</item> //textColor
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+    </style>
+
+    <style name="FourthTheme" parent = "Theme.MaterialComponents.DayNight">
+        <item name="colorPrimary">#F76060</item>
+        <item name="colorPrimaryVariant">#DE3131</item>
+        <item name="colorOnPrimary">#771010</item>
+        <!-- Status bar color.-->
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+
+    </style>
+
+    <style name="FifthTheme" parent = "Theme.MaterialComponents.DayNight">
+        <item name="colorPrimary">#72F074</item>
+        <item name="colorPrimaryVariant">#25C128</item>
+        <item name="colorOnPrimary">#107711</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+    </style>
+
+    <style name="SixthTheme" parent = "Theme.MaterialComponents.DayNight">
+        <item name="colorPrimary">#F072A9</item>
+        <item name="colorPrimaryVariant">#D02A73</item>
+        <item name="colorOnPrimary">#881749</item>
         <!-- Status bar color.-->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
 
