--- a/app/src/main/res/layout/activity_game_screen.xml
+++ b/app/src/main/res/layout/activity_game_screen.xml
@@ -3,19 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="20dp"
+    android:padding="10dp"
     android:orientation="vertical"
     android:background="@drawable/nba_trivia"
-    tools:context=".MainActivity">
+    tools:context=".GameScreen">
 
-
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -24,14 +16,16 @@
         android:layout_marginLeft="20dp"
         android:textSize="50dp"
         android:textColor="@color/white"
-        android:layout_gravity="left"
+        android:textAlignment="center"
+        android:layout_gravity="center"
         android:id="@+id/categoryName" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="10dp"
         android:layout_gravity="center"
+        android:textAlignment="center"
         android:text="Trivia Question"
         android:textSize="30dp"
         android:textColor="@color/white"
@@ -80,7 +74,7 @@
         android:layout_marginTop="40dp"
         android:layout_gravity="center"
         android:textSize="30dp"
-        android:text="Current Score: "
+        android:text=""
         android:textColor="@color/white"
         android:id="@+id/Score" />
 
