--- a/app/src/main/res/menu/question_options.xml
+++ b/app/src/main/res/menu/question_options.xml
@@ -7,12 +7,6 @@
         android:icon="@drawable/ic_launcher_info_foreground"
         app:showAsAction="ifRoom"
         />
-    <item android:id="@+id/menu_share"
-        android:title="Share"
-        android:icon="@drawable/ic_launcher_share_foreground"
-        app:showAsAction="always"
-        app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider"
-        />
 
     <item android:id="@+id/change_color"
         android:title="Settings"
@@ -20,5 +14,10 @@
         app:showAsAction="ifRoom"
         />
 
+    <item android:id="@+id/action_share"
+        android:title="Share"
+        app:showAsAction="collapseActionView"
+        app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider"
+        />
 
 </menu>
