--- a/app/src/main/res/layout/activity_end_screen.xml
+++ b/app/src/main/res/layout/activity_end_screen.xml
@@ -13,19 +13,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="You Lose!"
+        android:text="Wrong Answer Selected: You Lose!"
         android:textColor="@color/white"
         android:textSize="50dp"
-        android:layout_marginTop="50dp"
-        />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="left"
-        android:text="Your Score: "
-        android:textColor="@color/white"
-        android:textSize="30dp"
         android:layout_marginTop="50dp"
         />
 
