--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -7,7 +7,7 @@
 
         <Button
             android:id="@+id/Players"
-            android:layout_width="800dp"
+            android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_weight="1"
             android:text="Players"
