--- a/app/src/main/res/layout/activity_about_page.xml
+++ b/app/src/main/res/layout/activity_about_page.xml
@@ -26,8 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="50dp"
-        android:layout_gravity="center" />
-
+        android:layout_gravity="center" >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -93,5 +92,8 @@
             android:textAlignment="center"
             android:layout_centerInParent="true"/>
     </LinearLayout>
+    </TableLayout>
+
+
 
 </RelativeLayout>
