--- a/app/src/main/res/layout/fragment_main_two.xml
+++ b/app/src/main/res/layout/fragment_main_two.xml
@@ -7,16 +7,15 @@
 
     <TextView
         android:id="@+id/Game_Message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="center_vertical"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginRight="100dp"
         android:text="Keep playing until you lose!"
-        android:textSize="40dp"
+        android:textSize="35dp"
         android:textColor="@color/white"
-        android:textAlignment="center" />
+        android:textAlignment="center"/>
 
     <Button
         android:id="@+id/Teams"
